# html-parser

./:   .clang-format  .clang-tidy  .gitignore  .gitmodules  :w  CMakeLists.txt  LICENSE  README.md  ]  build-debug-run.sh  build-release-run.sh  build-run.sh  build.sh  callgrind.out.32930  fuzzer  fuzzing.c  fuzzing.md  ideas.md  install-dependencies.sh  run-executable.sh  small-fixes.txt  todo.md  todo.txt
.github/workflows/: build.yml  memory-check.yml  test-workflow.yml
benchmarks/: CMakeLists.txt
benchmarks/src/: main.c
include/: nodes.h
include/dom/: document-comparison-status.h  document-comparison.h  document-status.h  document-user.h  document-utils.h  document-writing.h  document.h
include/flo/: html-parser.h
include/parse/: parse-property.h  parse.h
include/tokenizer/: parse-property.h  parse.h
include/type/: data-page-status.h  data-page.h  element-status.h  element.h  next-node.h  node-attribute-value.h  node-attribute.h  node-tag.h  node-type.h  node.h  parent-first-child.h  tag-status.h  tag.h
src/: comparison-status.c  main.c  nodes.c  parser.c  user.c
src/dom/: appendix.c  comparison.c  deletion.c  document-comparison.c  document-user.c  document-utils.c  document-writing.c  document.c  dom-registry.c  dom-traversal.c  dom-user.c  dom-util.c  dom-utils.c  dom-writing.c  dom.c  user.c  (+7 more)
test/: test-2-write.html  test-2.html  test-small.html  test-write.html  test.html
tests/: CMakeLists.txt
tests/data/html/: test-1-write.html  test-small.html  test-write.html
tests/include/: comparison-test.h  integration-test.h  pretty-print.h  test-status.h  test.h
tests/include/comparing/: comparing.h
tests/include/comparisons/: comparisons.h
tests/include/dom/appending/: appending.h
tests/include/dom/comparing/: comparing.h
tests/include/dom/deleting/: deleting.h
tests/include/dom/duplicating/: duplicating.h
tests/include/dom/parsing/: parsing.h
tests/include/dom/prepending/: prepending.h
tests/include/dom/querying/: querying.h
tests/include/dom/replacing/: replacing.h
tests/include/node/deleting/: deleting.h
tests/include/node/modifying/: modifying.h
tests/include/node/querying/: querying.h
tests/include/parsing/: parsing.h
tests/include/querying/: querying.h
tests/src/: comparison-test.c  integration-test.c  main-test.c  main.c  test.c
tests/src/comparing/: comparing.c
tests/src/comparing/inputs/: test-1.html  test-10.html  test-11.html  test-12-min.html  test-14-min.html  test-16-min.html  test-18.html  test-19.html  test-4.html  test-5.html  test-7.html  test-8.html  test-9.html
tests/src/comparisons/: comparisons.c  test-10.html  test-11-min.html  test-11.html  test-12-min.html  test-12.html  test-13-min.html  test-15.html  test-16.html  test-17-min.html  test-17.html  test-6.html  test-9.html
tests/src/comparisons/inputs/: test-1.html  test-12.html  test-14.html  test-16.html  test-7.html
tests/src/dom/appending/: appending.c
tests/src/dom/appending/inputs/: test-1-after.html  test-10-after.html  test-11-after.html  test-11-before.html  test-12-after.html  test-12-before.html  test-13-after.html  test-2-after.html  test-5-after.html  test-6-after.html  test-7-after.html  test-8-after.html  test-9-after.html
tests/src/dom/comparing/: comparing.c
tests/src/dom/comparing/inputs/: test-10.html  test-11-min.html  test-11.html  test-12-min.html  test-12.html  test-13.html  test-16-min.html  test-16.html  test-19.html  test-2.html  test-6.html  test-8.html
tests/src/dom/deleting/: deleting.c
tests/src/dom/deleting/inputs/: test-10-after.html  test-11-after.html  test-3-after.html  test-4-after.html  test-5-after.html  test-6-after.html  test-8-after.html  test-8-before.html  test-9-after.html
tests/src/dom/duplicating/: duplicating.c
tests/src/dom/parsing/: parsing.c
tests/src/dom/parsing/fuzz-inputs/: test-1.html
tests/src/dom/parsing/inputs/: test-1.html
tests/src/dom/prepending/: prepending.c
tests/src/dom/prepending/inputs/: test-1-after.html  test-10-after.html  test-11-after.html  test-11-before.html  test-12-after.html  test-13-after.html  test-13-before.html  test-2-after.html  test-5-after.html
tests/src/dom/querying/: querySelector.c  querySelectorAll.c  querying.c
tests/src/dom/replacing/: replacing.c
tests/src/dom/replacing/inputs/: test-1-after.html  test-10-after.html  test-10-before.html  test-11-after.html  test-11-before.html  test-12-after.html  test-12-before.html  test-2-after.html  test-3-after.html  test-4-after.html  test-5-after.html  test-7-after.html  test-8-after.html  test-9-after.html
tests/src/inputs/: parse-query-modify-after.html
tests/src/node/deleting/: deleting.c
tests/src/node/deleting/inputs/: test-1-after.html  test-2-after.html  test-3-after.html
tests/src/node/modifying/: modifying.c
tests/src/node/modifying/inputs/: test-2-after.html  test-3-after.html  test-3-before.html
tests/src/node/querying/: array-queries.c  bool-queries.c  char-queries.c  querying.c
tests/src/node/querying/inputs/: test-1.html
tests/src/parsing/: parsing.c
tests/src/parsing/inputs/: test-3.html
tests/src/querying/: querySelector.c  querySelectorAll.c  querying.c  test-1.html
tests/src/querying/inputs/: test-1.html
util/: CMakeLists.txt  README.md
util/include/flo/util/: array.h  assert.h  log.h  macros.h  maths.h  raw-data.h  types.h
util/include/flo/util/file/: file-status.h  path.h  read.h
util/include/flo/util/hash/: hash-comparison-status.h  hashes.h
util/include/flo/util/hash/msi/: common.h  string-set.h  uint16-set.h
util/include/flo/util/hash/trie/: common-iterator.h  string-set.h  string-uint16-map.h  uint16-set.h
util/include/flo/util/memory/: arena.h  buddy-allocator.h  macros.h  pool-allocator.h
util/include/flo/util/text/: char.h  string.h
util/src/: log.c
util/src/file/: path.c  read.c
util/src/hash/: hash-comparison-status.c
util/src/hash/msi/: common.c  string-set.c  uint16-set.c
util/src/hash/trie/: string-set.c  string-uint16-map.c  uint16-set.c
util/src/memory/: arena.c  buddy-allocator.c  pool-allocator.c
(+181 files in other folders)
